[package]
name = "Logging4Dummys"
version = "1.0.0"
edition = "2021"
authors = ["Benn1x"]
description = "an easy to use and still higly configurable logging libary"
license = "GPL-2.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono =  "0.4.23"
toml = "0.5.9"
serde_derive = "1.0.147"
serde = "1.0.147"
